Use git added and updated timestamps